# stalwart

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  COMPLETION.md  CONTRIBUTING.md  DEPLOY.md  DESCRIPTION.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  STALWART_Bridge_Safety_Research_Paper.md  docker-compose.yml  netlify.toml  organize.sh  package.json  pyproject.toml  quick_test.py  requirements.txt  setup.cfg  setup.py
Netlify/Netlify/: .gitignore  README.md  netlify.toml
Netlify/Netlify/config/: api-keys.js
Netlify/Netlify/functions/: bridge-health.js  bridge-zones.js  get-alerts.js  get-bridge-spans.js  get-critical-zones.js  get-stats.js
Netlify/Netlify/public/: dashboard.html  documentation.html  index.html
docs/research/: STALWART_Bridge_Safety_Research_Paper.md
functions/: get-alerts.js  get-bridges.js  get-metrics.js
reports/: README.md  crontab.example  generate.sh  generate_all_bridges.py  generate_txt_reports.py  generate_unified_report.py  generate_unified_report_v2.1.py  generate_unified_report_v2.2.py  generator.py  simple_generate.py
reports/archives/: README.md
reports/daily/: README.md
reports/daily/2026-02-16/: STW-D-20260216-BR-001.md  STW-D-20260216-BR-001.txt  STW-D-20260216-BR-002.md  STW-D-20260216-BR-002.txt  STW-D-20260216-BR-003.md  STW-D-20260216-BR-003.txt  STW-D-20260216-BR-004.md  STW-D-20260216-BR-004.txt  STW-D-20260216-TEST-001.md  STW-D-20260216-TEST-001.txt
reports/monthly/: README.md
reports/monthly/2026-02/: STW-M-202602-TEST-001.md
reports/templates/: alerts_template.md  alerts_template.txt  daily_template.md  daily_template.txt  monthly_template.md  monthly_template.txt  weekly_template.md  weekly_template.txt
reports/unified/: STW-UNIFIED-20260216-v2.1.txt  STW-UNIFIED-20260216-v2.2-ASSET-READY.txt  STW-UNIFIED-20260216.txt
reports/weekly/: README.md
reports/weekly/2026-W08/: STW-W-202608-TEST-001.md
scripts/: backup.sh  calibrate_sensors.py  deploy.sh  generate_report.py  migrate_data.py  performance_test.py  restore.sh  setup.sh  setup_database.sh
src/stalwart/: __init__.py  cli.py  main.py
src/stalwart/analysis/: metrics.py  processor.py
src/stalwart/api/: app.py
src/stalwart/core/: bridge.py  measurement.py  sensor.py
src/stalwart/dashboard/: app.py
src/stalwart/ml/: __init__.py  anomaly_detection.py  feature_engineering.py  models.py  prediction.py
src/stalwart/utils/: config.py  constants.py  logger.py
tests/: __init__.py  run_all_tests.py  test_core.py  test_metrics.py  test_ml_integration.py  test_ml_models.py  test_processor.py  test_utils.py
