[metadata]
name = stalwart
version = 1.0.0
description = Structural Telemetry And Load Warning Architecture for Resilient Trusses
long_description = file: README.md
long_description_content_type = text/markdown
author = Samir Baladi
author_email = gitdeeper@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Civil Engineering

[options]
packages = find:
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    pandas>=1.3.0
    matplotlib>=3.4.0
    pydantic>=2.0.0
python_requires = >=3.9
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    tests
    tests.*
    docs
    docs.*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.9.0
    pre-commit>=2.0.0
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.19.0
field =
    pyserial>=3.5
    smbus2>=0.4.0
    RPi.GPIO>=0.7.0
dashboard =
    fastapi>=0.95.0
    uvicorn>=0.21.0
    plotly>=5.13.0
    dash>=2.9.0

[options.entry_points]
console_scripts =
    stalwart-monitor = stalwart.cli:monitor
    stalwart-analyze = stalwart.cli:analyze
    stalwart-dashboard = stalwart.cli:dashboard

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,venv,.venv

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
follow_imports = silent
strict_optional = True

[coverage:run]
source = src/stalwart
omit = */tests/*,*/test_*,*/.git/*,*/__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.:
    raise AssertionError
    raise NotImplementedError
show_missing = True
skip_covered = True
